fix startup configs

--- a/configs/leaf4.cfg
+++ b/configs/leaf4.cfg
@@ -49,7 +49,6 @@ set / system network-instance protocols bgp-vpn
 set / system network-instance protocols bgp-vpn bgp-instance 1
 
 # MAC-VRF definition
-set / network-instance "MAC-VRF 1"
 set / network-instance "MAC-VRF 1" type mac-vrf
 set / network-instance "MAC-VRF 1" interface ethernet-1/1.1
 set / network-instance "MAC-VRF 1" vxlan-interface vxlan0.1
@@ -67,15 +66,21 @@ set / network-instance "MAC-VRF 1" protocols bgp-vpn bgp-instance 1 route-distin
 set / network-instance "MAC-VRF 1" protocols bgp-vpn bgp-instance 1 route-target
 set / network-instance "MAC-VRF 1" protocols bgp-vpn bgp-instance 1 route-target export-rt target:65011:1
 set / network-instance "MAC-VRF 1" protocols bgp-vpn bgp-instance 1 route-target import-rt target:65011:1
+set / network-instance "MAC-VRF 1" protocols igmp-snooping
+set / network-instance "MAC-VRF 1" protocols igmp-snooping admin-state enable
+set / network-instance "MAC-VRF 1" protocols igmp-snooping trace-options
+set / network-instance "MAC-VRF 1" protocols igmp-snooping trace-options trace
+set / network-instance "MAC-VRF 1" protocols igmp-snooping trace-options trace packet
+set / network-instance "MAC-VRF 1" protocols igmp-snooping trace-options trace packet modifier egress-ingress-and-dropped
+set / network-instance "MAC-VRF 1" protocols igmp-snooping interface ethernet-1/1.1
+set / network-instance "MAC-VRF 1" protocols igmp-snooping interface ethernet-1/1.1 version 2
+set / network-instance "MAC-VRF 1" protocols igmp-snooping interface ethernet-1/1.1 send-queries true
 
 # default network-instance definition
-set / network-instance default
 set / network-instance default type default
 set / network-instance default interface ethernet-1/51.0
 set / network-instance default interface ethernet-1/52.0
 set / network-instance default interface system0.0
-
-# configuring BGP for both underlay and overlay
 set / network-instance default protocols
 set / network-instance default protocols bgp
 set / network-instance default protocols bgp autonomous-system 65014
@@ -85,12 +90,16 @@ set / network-instance default protocols bgp ebgp-default-policy import-reject-a
 set / network-instance default protocols bgp ebgp-default-policy export-reject-all false
 set / network-instance default protocols bgp afi-safi ipv4-unicast
 set / network-instance default protocols bgp afi-safi ipv4-unicast admin-state enable
+set / network-instance default protocols bgp trace-options
+set / network-instance default protocols bgp trace-options flag update
+set / network-instance default protocols bgp trace-options flag update modifier detail
 set / network-instance default protocols bgp group overlay
 set / network-instance default protocols bgp group overlay peer-as 65555
 set / network-instance default protocols bgp group overlay afi-safi evpn
 set / network-instance default protocols bgp group overlay afi-safi evpn admin-state enable
 set / network-instance default protocols bgp group overlay afi-safi ipv4-unicast
 set / network-instance default protocols bgp group overlay afi-safi ipv4-unicast admin-state disable
+set / network-instance default protocols bgp group overlay local-as
 set / network-instance default protocols bgp group overlay local-as as-number 65555
 set / network-instance default protocols bgp group overlay timers
 set / network-instance default protocols bgp group overlay timers connect-retry 1
@@ -104,8 +113,6 @@ set / network-instance default protocols bgp group underlay afi-safi ipv4-unicas
 set / network-instance default protocols bgp group underlay timers
 set / network-instance default protocols bgp group underlay timers connect-retry 1
 set / network-instance default protocols bgp group underlay timers minimum-advertisement-interval 1
-
-# configuring BGP neighbors
 set / network-instance default protocols bgp neighbor 10.0.0.21
 set / network-instance default protocols bgp neighbor 10.0.0.21 peer-group overlay
 set / network-instance default protocols bgp neighbor 10.0.0.22
