--- a/configs/spine1.cfg
+++ b/configs/spine1.cfg
@@ -62,6 +62,14 @@ set / network-instance default interface ethernet-1/32.0
 set / network-instance default interface system0.0
 
 # configuring BGP for both underlay and overlay
+set / network-instance default type default
+set / network-instance default interface ethernet-1/11.0
+set / network-instance default interface ethernet-1/12.0
+set / network-instance default interface ethernet-1/13.0
+set / network-instance default interface ethernet-1/14.0
+set / network-instance default interface ethernet-1/31.0
+set / network-instance default interface ethernet-1/32.0
+set / network-instance default interface system0.0
 set / network-instance default protocols
 set / network-instance default protocols bgp
 set / network-instance default protocols bgp autonomous-system 65020
@@ -81,6 +89,7 @@ set / network-instance default protocols bgp group overlay afi-safi evpn
 set / network-instance default protocols bgp group overlay afi-safi evpn admin-state enable
 set / network-instance default protocols bgp group overlay afi-safi ipv4-unicast
 set / network-instance default protocols bgp group overlay afi-safi ipv4-unicast admin-state disable
+set / network-instance default protocols bgp group overlay local-as
 set / network-instance default protocols bgp group overlay local-as as-number 65555
 set / network-instance default protocols bgp group overlay route-reflector
 set / network-instance default protocols bgp group overlay route-reflector client true
@@ -97,8 +106,6 @@ set / network-instance default protocols bgp group underlay afi-safi ipv4-unicas
 set / network-instance default protocols bgp group underlay timers
 set / network-instance default protocols bgp group underlay timers connect-retry 1
 set / network-instance default protocols bgp group underlay timers minimum-advertisement-interval 1
-
-# configuring BGP neighbors
 set / network-instance default protocols bgp neighbor 100.21.11.2
 set / network-instance default protocols bgp neighbor 100.21.11.2 peer-as 65011
 set / network-instance default protocols bgp neighbor 100.21.11.2 peer-group underlay
