--- a/configs/sw1.cfg
+++ b/configs/sw1.cfg
@@ -33,7 +33,11 @@ set / interface lag1 subinterface 1 vlan encap single-tagged
 set / interface lag1 subinterface 1 vlan encap single-tagged vlan-id 1
 
 # MAC-VRF definition
-set / network-instance "MAC-VRF 1"
 set / network-instance "MAC-VRF 1" type mac-vrf
-set / network-instance "MAC-VRF 1" interface lag1.1
 set / network-instance "MAC-VRF 1" interface ethernet-1/1.1
+set / network-instance "MAC-VRF 1" interface lag1.1
+set / network-instance "MAC-VRF 1" protocols igmp-snooping admin-state enable
+set / network-instance "MAC-VRF 1" protocols igmp-snooping trace-options trace packet modifier egress-ingress-and-dropped
+set / network-instance "MAC-VRF 1" protocols igmp-snooping interface ethernet-1/1.1 static-membership-groups group 239.0.0.20 starg
+set / network-instance "MAC-VRF 1" protocols igmp-snooping interface ethernet-1/1.1 static-membership-groups group 239.0.0.31 source 192.168.1.31
+set / network-instance "MAC-VRF 1" protocols igmp-snooping interface lag1.1
