--- a/configs/leaf4.cfg
+++ b/configs/leaf4.cfg
@@ -107,7 +107,7 @@ set / network-instance default protocols bgp group overlay timers minimum-advert
 set / network-instance default protocols bgp group overlay transport
 set / network-instance default protocols bgp group overlay transport local-address 10.0.0.14
 set / network-instance default protocols bgp group underlay
-set / network-instance default protocols bgp group underlay export-policy system_ip
+set / network-instance default protocols bgp group underlay export-policy [ system_ip ]
 set / network-instance default protocols bgp group underlay afi-safi ipv4-unicast
 set / network-instance default protocols bgp group underlay afi-safi ipv4-unicast admin-state enable
 set / network-instance default protocols bgp group underlay timers
