add policy matching rt7 on leaf1

--- a/configs/leaf1.cfg
+++ b/configs/leaf1.cfg
@@ -153,14 +153,16 @@ set / network-instance default protocols bgp neighbor 100.22.11.1 peer-as 65020
 set / network-instance default protocols bgp neighbor 100.22.11.1 peer-group underlay
 
 # defining a routing policy to export the system IP address in eBGP
-set / routing-policy
-set / routing-policy prefix-set system_ip
+set / routing-policy prefix-set prefix-239.0.0.20 prefix 239.0.0.20/32 mask-length-range exact
 set / routing-policy prefix-set system_ip prefix 10.0.0.11/32 mask-length-range exact
-set / routing-policy policy system_ip
-set / routing-policy policy system_ip statement 10
-set / routing-policy policy system_ip statement 10 match
+set / routing-policy extended-community-set color-1 member [ color:01:1 ]
+set / routing-policy policy add-color-1-to-rt-7-239.0.0.20 statement 10 match bgp evpn route-type [ 7 ]
+set / routing-policy policy add-color-1-to-rt-7-239.0.0.20 statement 10 match multicast group-address prefix-set prefix-239.0.0.20
+set / routing-policy policy add-color-1-to-rt-7-239.0.0.20 statement 10 action policy-result accept
+set / routing-policy policy add-color-1-to-rt-7-239.0.0.20 statement 10 action bgp extended-community operation add
+set / routing-policy policy add-color-1-to-rt-7-239.0.0.20 statement 10 action bgp extended-community method reference
+set / routing-policy policy add-color-1-to-rt-7-239.0.0.20 statement 10 action bgp extended-community referenced-sets [ color-1 ]
 set / routing-policy policy system_ip statement 10 match prefix-set system_ip
-set / routing-policy policy system_ip statement 10 action
 set / routing-policy policy system_ip statement 10 action policy-result accept
 
 set / tunnel-interface vxlan0
